<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uta.fisei.aplicacion1.InicioActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTime"
        android:id="@+id/txtTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtCategoria"
        android:layout_below="@+id/txtTime"
        android:text="@string/txtCategoria" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNumeroPregunta"
        android:id="@+id/txtNumeroPregunta"
        android:layout_below="@+id/txtCategoria"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtIndicacion"
        android:id="@+id/txtIndicacion"
        android:layout_below="@+id/txtNumeroPregunta"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEnunciado"
        android:id="@+id/txtEnunciado"
        android:layout_below="@+id/txtIndicacion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txtEnunciado"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:id="@+id/rdgrOpciones"
        android:layout_above="@+id/btnAnterior"></RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAnterior"
        android:id="@+id/btnAnterior"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="165dp"
        android:layout_marginLeft="86dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSiguiente"
        android:id="@+id/btnSiguiente"
        android:layout_alignTop="@+id/btnAnterior"
        android:layout_toRightOf="@+id/btnAnterior"
        android:layout_toEndOf="@+id/btnAnterior"
        android:layout_marginLeft="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnVerbal"
        android:id="@+id/btnVerbal"
        android:layout_below="@+id/btnSiguiente"
        android:layout_alignRight="@+id/txtNumeroPregunta"
        android:layout_alignEnd="@+id/txtNumeroPregunta" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnNumerico"
        android:id="@+id/btnNumerico"
        android:layout_below="@+id/btnSiguiente"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAbstracto"
        android:id="@+id/btnAbstracto"
        android:layout_alignTop="@+id/btnNumerico"
        android:layout_toRightOf="@+id/btnNumerico"
        android:layout_toEndOf="@+id/btnNumerico" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnFinalizar"
        android:id="@+id/btnFinalizar"
        android:layout_below="@+id/btnVerbal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
